@@ -4,7 +4,6 @@ import org.assertj.core.api.WithAssertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -13,19 +12,19 @@ class AppTest implements WithAssertions {
     @Test
     void immutability() {
         // Create a mutable list with 1 element
-        final List<String> myList1 = new ArrayList<>();
+        var myList1 = new ArrayList<String>();
         myList1.add("OneValue");
-        final List<String> myList2 = Collections.singletonList("OneValue");
+        var myList2 = List.of("OneValue");
 
         // Create model 1, assigning the list1
-        MyModel myModel1 = MyModel.builder()
+        var myModel1 = MyModel.builder()
                 .myOptional(Optional.of(1)) // 😥 🔴 No helper for Optional
                 .myString("Hello")
                 .myList(myList1) // 😥 🔴 No helper for List
                 .build();
 
         // Create model 2, assigning the list2
-        MyModel myModel2 = MyModel.builder() // 😥 🔴 No helper for copying
+        var myModel2 = MyModel.builder() // 😥 🔴 No helper for copying
                 .myOptional(Optional.of(1))
                 .myString("Hello")
                 .myList(myList2)
@@ -39,7 +38,7 @@ class AppTest implements WithAssertions {
         myList1.add("AnotherValue");
 
         // Compare the 2 objects:
-        //   - Test FAILS for Lombok 😮 🔴
-        assertThat(myModel1).isEqualTo(myModel2);
+        // - PASSES objects are NOT EQUAL for Lombok 😮 🔴
+        assertThat(myModel1).isNotEqualTo(myModel2);
     }
 }
